--- a/app/views/guides/_guide.html.erb
+++ b/app/views/guides/_guide.html.erb
@@ -3,7 +3,7 @@
 <%= render partial: 'layouts/authoring', locals: {guide: @guide} %>
 
 <% if subject.timed? && @stats.started? && !current_user.teacher? %>
-  <%= render partial: 'layouts/timer', locals: {end_time: subject.real_end_time(current_user)} %>
+  <%= render partial: 'layouts/timer', locals: { duration: subject.time_left(current_user) } %>
 <% end %>
 
 <%= yield if block_given? %>
