Properly align discussion-message-bubble-title elements

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_discussion.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_discussion.scss
@@ -329,12 +329,11 @@ $moderator-badge-color: #dd9900;
     }
     .discussion-message-bubble-title {
       padding: 5px 15px;
-      display: block;
+      display: flex;
       .message-date {
         font-size: 15px;
       }
       .actions {
-        float: right;
         > a, .dropdown {
           margin-left: 20px;
           cursor: pointer;
