--- a/app/views/errors/forbidden.html.erb
+++ b/app/views/errors/forbidden.html.erb
@@ -8,12 +8,10 @@
         <%= t(:error_description, error: link_to_status_codes(403)).html_safe %>
       </p>
       <p class="mu-error-explanation-line">
-        <%= Organization.current.explain_error(403, explanation).html_safe %>
+        <%= Organization.current.explain_error(error_code, explanation).html_safe %>
       </p>
       <p class="mu-error-contact-line mu-maybe">
         <%= t(:contact_administrator, link: mail_to_administrator).html_safe %>
       </p>
     </div>
 <% end %>
-
-
