--- a/app/views/errors/not_found.html.erb
+++ b/app/views/errors/not_found.html.erb
@@ -8,7 +8,7 @@
         <%= t(:error_description, error: link_to_error_404).html_safe %>
       </p>
       <p class="mu-error-explanation-line">
-        <%= Organization.current.explain_error(404, :not_found_explanation).html_safe %>
+        <%= Organization.current.explain_error(:not_found, :not_found_explanation).html_safe %>
       </p>
     </div>
 <% end %>
